cmake_minimum_required(VERSION 3.15)
project(DS_ALGS_CODING_HW)

set(CMAKE_CXX_STANDARD 20)

add_executable(DS_ALGS_CODING_HW main.cpp Graph_Node.cpp Graph_Node.h Graph_Edge.cpp Graph_Edge.h Rooted_Tree.cpp Rooted_Tree.h Tree_Node.cpp Tree_Node.h Dynamic_Graph.cpp Dynamic_Graph.h LinkedList.h ListNode.h)